Added FTP service

--- a/OCTannerAnniversaryDates/OCTannerAnniversaryDates.csproj
+++ b/OCTannerAnniversaryDates/OCTannerAnniversaryDates.csproj
@@ -10,7 +10,19 @@
   <ItemGroup>
     <PackageReference Include="GemBox.Spreadsheet" Version="2025.5.104" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.5" />
+    <PackageReference Include="SSH.NET" Version="2025.0.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.IO.Abstractions" Version="22.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
